2002-04-06  Per Bothner  <per@bothner.com>

	* AbstractSequence.java.in (hasNext):  Make public.
	* GapVector.java (hasNext):  Likewise.
	* LList.java (hasNext):  Likewise.
	* StableVector.java (hasNext):  Likewise.

2002-03-19  Per Bothner  <per@bothner.com>

	* AbstractSequence.java.in (remove):  Make public.
	* SimpleVector.java.in (remove):  Make public.
	* StableVector.java (makePosition):  Make public.

2002-02-16  Per Bothner  <per@bothner.com>

	* UnescapedData.java:  Implement Consumable..
	(consume):  New method.

2002-02-05  Per Bothner  <per@bothner.com>

	* TreeList.java (getNextTypeIndex):  Fix bad BEGIN_GROUP_LONG handling.

	* TreeList.java (nextMatchingChild):  New method.

	* ElementPredicate.java:  New interface.
	* GroupPredicate.java:  New interface, extends ElementPredicate.java.
	* Makefile.am (java_sources):  Update accordingly.

2002-02-01  Per Bothner  <per@bothner.com>

	* PrintConsumer.java (writeInt):  Add missing startNumber call.

2002-01-23  Per Bothner  <per@bothner.com>

	* ConsumerWriter.java:  Extends Writer.
	* PrintConsumer.java:  New class, extends PrintWriter.
	* Makefile.am (java_sources):  Add new classes.

2002-01-21  Per Bothner  <per@bothner.com>

	* UnescapedData.java:  New class.
	* Makefile.am (java_sources):  Add UnescapedData.java.

2002-01-07  Per Bothner  <per@bothner.com>

	* Consumer.java (beginDocument, endDocument):  New methods.
	* FilterConsumer.java (beginDocument, endDocument):  New methods.
	* TreeList.java (END_DOCUMENT):  New code.
	(BEGIN_DOCUMENT):  Now followed by pointer to END_DOCUMENT.
	(various methods):  update as appropriate.

	* FilterConsumer.java (skipping):  New boolean field.
	(Consumer methods):  Do nothing if skipping is true.
	* VoidConsumer.java:  New extends FilterConsumer.
	(Consumer methods):  Remove - use inherited versions.

2001-12-29  Per Bothner  <per@bothner.com>

	* TreeList.java (consumeRange):  Fix indexing bug for BEGIN_GROUP_LONG.
